[workspace]
resolver = "2"
members = ["ipa-core", "ipa-macros"]

[profile.release]
incremental = true
lto = "thin"

[profile.release-with-debug]
inherits = "release"
debug = true

[profile.bench]
debug-assertions = true

[profile.bench-dhat]
inherits = "bench"
debug-assertions = false
incremental = true
lto = "thin"
debug = 1
